--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "block-game-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ethanSE.github.io/block_game_clone",
   "dependencies": {
     "@react-three/drei": "^9.46.0",
     "@react-three/fiber": "^8.8.10",
@@ -20,6 +21,8 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.144.0"
+    "@types/three": "^0.144.0",
+    "gh-pages": "^5.0.0"
   }
 }
