--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "block-game-clone",
+  "name": "block-game-clone-frontend",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ethanSE.github.io/block_game_clone",
   "dependencies": {
     "@react-three/drei": "^9.78.1",
     "@react-three/fiber": "^8.13.4",
+    "block-game-clone-backend": "0.1.9",
     "fp-ts": "^2.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,9 +16,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,6 +50,8 @@
     "@types/three": "^0.153.0",
     "gh-pages": "^5.0.0",
     "gltfjsx": "^6.2.5",
-    "typescript": "^4.8.4"
+    "react-app-rewired": "^2.2.1",
+    "typescript": "^4.8.4",
+    "wasm-loader": "^1.3.0"
   }
 }
