--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@react-three/drei": "^9.78.1",
     "@react-three/fiber": "^8.13.4",
     "block-game-clone-backend": "0.1.19",
+    "color-interpolate": "^1.0.5",
     "fp-ts": "^2.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
