--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "block-game-clone-backend": "0.1.26",
     "fp-ts": "^2.16.0",
     "react": "^18.2.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "three": "^0.154.0"
