--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
     "react": "^18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "three": "^0.154.0"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "start": "r3f-pack start",
+    "build": "r3f-pack build",
+    "buildByDate": "r3f-pack buildByDate"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +50,7 @@
     "@types/three": "^0.153.0",
     "gh-pages": "^5.0.0",
     "gltfjsx": "^6.2.5",
+    "r3f-pack": "^3.0.9",
     "react-app-rewired": "^2.2.1",
     "typescript": "^4.8.4",
     "wasm-loader": "^1.3.0"
