--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "block-game-clone-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ethanSE.github.io/block_game_clone",
+  "homepage": "https://ethanSE.github.io/block_game_clone/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -51,7 +51,7 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@types/three": "^0.169.0",
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^6.2.0",
     "r3f-pack": "^3.0.9",
     "react-app-rewired": "^2.2.1",
     "typescript": "^4.8.4",
